# openGLTutorial

./: CMakeLists.txt
include/: MainWindow.h
include/attributes/: GLComponent.h
include/blur/: GLComponent.h
include/depth/: GLComponent.h
include/lighting/: GLComponent.h
include/modelview_cpu/: GLComponent.h
include/triangle/: GLComponent.h
shader/: CMakeLists.txt  attributes.frag  attributes.vert  blur.frag  color.frag  minimal.frag  minimal.vert  mvp.vert  normal.frag  normal.vert  texture.frag  texture.vert  varying.frag  varying.vert
source/: Application.cpp  MainWindow.cpp
source/animation/: GLComponent.cpp
source/attributes/: GLComponent.cpp
source/blur/: GLComponent.cpp
source/culling/: GLComponent.cpp
source/lighting/: GLComponent.cpp
source/model_cpu/: GLComponent.cpp
source/modelview_cpu/: GLComponent.cpp
source/modelviewprojection_cpu/: GLComponent.cpp
source/modelviewprojection_gpu/: GLComponent.cpp
source/texture/: GLComponent.cpp
source/translate_cpu/: GLComponent.cpp
source/triangle/: GLComponent.cpp
source/varying/: GLComponent.cpp
